Fix alignment for mobile

--- a/style.css
+++ b/style.css
@@ -190,8 +190,8 @@ img.rocket {
 /* rest of the planets and objects*/
 
 div.planets>img[alt="Astronaut"] {
-    right: 40%;
-    top: 35rem;
+    right: 15%;
+    top: 30rem;
     animation: 5s infinite alternate astronaut ease-in-out;
 }
 
@@ -327,6 +327,12 @@ footer a {
         padding-right: 5rem;
     }
 
+    /* planets and stuff */
+    div.planets>img[alt="Astronaut"] {
+        right: 40%;
+        top: 25rem;
+    }
+
     /* rest of the sections */
 
     #hajde-da-zajedno-radimo img[alt="Planet Saturn"] {
@@ -342,6 +348,10 @@ footer a {
     #hajde-da-zajedno-radimo img[alt="Rocket"] {
         right: 20%;
         animation: 120s rotate reverse linear infinite;
+    }
+
+    #zasto-mozete-da-nam-verujete>div.flex.wrap>div {
+        max-width: 350px;
     }
 
     #zasto-mozete-da-nam-verujete p.accent-bottom {
@@ -363,6 +373,7 @@ footer a {
         bottom: 50px;
         animation: 120s rotate reverse linear infinite;
     }
+
 
     #cime-se-bavimo div:has(img[alt="Blueprint"]) {
         translate: -30px -250px;
@@ -537,7 +548,7 @@ footer a {
 }
 
 .highlight {
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.6);
     padding-left: 10px;
     padding-right: 10px;
     cursor: default;
